--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dateformat": "^3.0.3",
+    "dotenv": "^8.2.0",
     "exceljs": "^4.1.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "xlsx-populate": "^1.21.0"
